# ComputerGraphics

./: .gitignore  LICENSE
HW1/: CMakeLists.txt  main.cpp
HW1/examples/: cube.txt  teapot.txt  tube.txt
HW1/include/config/: LightingSettings.h  PropertyLimits.h
HW1/include/controller/: RequestController.h  SceneController.h
HW1/include/core/: Camera.h  Color.h  Framebuffer.h  Light.h  Mesh.h  Scene.h  SceneObject.h  Triangle.h  Vertex.h
HW1/include/data/: Fragment.h  Varyings.h  VertexInput.h  VertexOutput.h
HW1/include/gui/: CameraControlPanel.h  GUIWindow.h  LightControlPanel.h  LightSettingsPanel.h  Menu.h  ObjectControlPanel.h  Slider.h  WebServer.h
HW1/include/io/: MeshLoader.h
HW1/include/material/: DepthMaterial.h  FlatMaterial.h  GouraudMaterial.h  Material.h  PhongMaterial.h  TextureMaterial.h  UnlitMaterial.h
HW1/include/math/: MathUtils.h  Matrix4x4.h  Vector3.h  Vector4.h
HW1/include/pipeline/: Clipper.h  Rasterizer.h  Renderer.h  Transform.h
HW1/include/shader/: FragmentShader.h  Shader.h  VertexShader.h
HW1/include/uniform/: SceneUniforms.h  TransformUniforms.h  UniformContext.h
HW1/src/config/: LightingSettings.cpp
HW1/src/controller/: RequestController.cpp  SceneController.cpp
HW1/src/core/: Camera.cpp  Color.cpp  Framebuffer.cpp  Light.cpp  Mesh.cpp  Scene.cpp  SceneObject.cpp  Triangle.cpp  Vertex.cpp
HW1/src/gui/: CameraControlPanel.cpp  GUIWindow.cpp  LightControlPanel.cpp  LightSettingsPanel.cpp  Menu.cpp  ObjectControlPanel.cpp  Slider.cpp  WebServer.cpp
HW1/src/io/: BMPEncoder.cpp  MeshLoader.cpp
(+12 files in other folders)
